# eu-ai-act-mcp

./: .gitignore  LICENSE  MAPPING_GUIDE.md  Procfile  README.md  audit_processor.py  audit_service.py  batch_processor.py  citation_schema.py  compliance_service.py  context.md  docx_generator.py  generate_report.py  pdf_generator.py  pyproject.toml  questions.json  report_generator.py  requirements.txt  run_http_server.py  server.py  server_config.json.sample  test_models.csv
.claude/: gsd-file-manifest.json
.gemini/: gsd-file-manifest.json
.opencode/: gsd-file-manifest.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.5-ROADMAP.md
.planning/phases/01-pdf-infrastructure-data-model/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md  01-UAT.md  01-VERIFICATION.md
.planning/phases/02-mcp-tool-integration-file-management/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  02-UAT.md  02-VERIFICATION.md
automated_testing/: verify_model_cards.py
templates/: default_template.docx
tests/: test_audit_processor.py  test_audit_service.py  test_batch_processor.py  test_citation_schema.py  test_compliance_service.py  test_coverage_enforcement.py  test_document_fetch.py  test_link_discovery.py  test_pdf_generator.py  test_report_generator.py  test_source_report_tool.py
(+45 files in other folders)
